# trajectory_optimization

./: .gitignore  CMakeLists.txt  README.md  mainpage.dox  manifest.xml
include/trajectory_optimization/: multivariate_gaussian.h  trajectory.h  trajectory_cost.h  trajectory_optimizer.h  trajectory_optimizer_node.h  trajectory_parameters.h  utils.h
launch/: chomp_node.launch  trajectory_optimization.launch
src/: trajectory.cpp  trajectory_cost.cpp  trajectory_optimizer.cpp  trajectory_optimizer_node.cpp  trajectory_parameters.cpp
src/trajectory_optimization/msg/: _JointVelocityArray.py  __init__.py
src/trajectory_optimization/srv/: _GetChompCollisionCost.py  _GetStateCost.py  __init__.py
